# ai_event_chat

./: .env.template  .gitignore  Dockerfile  Gemfile  Procfile.dev  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deploy-expo.yml
app/controllers/: ai_words_controller.rb  contact_controller.rb  home_controller.rb  mister_ai_controller.rb  quizzes_controller.rb
app/models/: ai_word.rb  contact_submission.rb  hubspot_client.rb  hubspot_form.rb  hubspot_ops_form.rb  hubspot_quiz_form.rb  openai_client.rb  quiz.rb  (+2 more)
config/: ai_words.yml  application.rb  cable.yml  credentials.yml.enc  database.yml  quizzes.yml  routes.rb
db/: schema.rb
tacit-knowledge/: .editorconfig  .gitignore  CLAUDE.md  README.md  docker-compose.yml
tacit-knowledge/worker/: .env.example  .gitignore  Dockerfile  Dockerfile.lambda  README.md  lambda_handler.py  pyproject.toml  worker.py
tacit-knowledge/worker/src/: config.py  prompts.yml
tacit-knowledge/worker/src/migrations/: migrate_csv_to_qa.py  rename_llamaindex_table.py
tacit-knowledge/worker/src/scripts/: restart_worker.sh  start_worker.sh  stop_worker.sh
tacit-knowledge/worker/src/utils/: __init__.py  database.py  file.py  indexing.py  llm.py  media.py  models.py  prompt_loader.py  s3.py
tacit-knowledge/worker/src/workflows/: __init__.py  index.py
tacit-knowledge/worker/src/workflows/steps/: __init__.py  cross_user_conflict_detection.py  data_acquisition_index.py  document_index.py  document_parse.py  manual_generation.py  plan_generation.py  qa_generation.py  video_encoding.py
(+730 files in other folders)
